--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="###theme-class###" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="" />
     <link rel="icon" href="%svelte.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <script> -->
-    <!--   if (document.cookie.includes("dark")) -->
-    <!--     document.documentElement.classList.add("dark"); -->
-    <!-- </script> -->
     %svelte.head%
   </head>
 
