--- a/src/app.html
+++ b/src/app.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="" />
-    <link rel="icon" href="%svelte.assets%/favicon.png" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    %svelte.head%
+    %sveltekit.head%
   </head>
 
   <body class="text-stone-900 dark:bg-stone-900 dark:text-white">
-    %svelte.body%
+    %sveltekit.body%
   </body>
 </html>
