--- a/src/app.html
+++ b/src/app.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
-<html class="###theme-class###" lang="en">
+<html lang="en" class="###theme-class###">
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%sveltekit.assets%/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%sveltekit.assets%/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%sveltekit.assets%/favicon-16x16.png"
+    />
     <link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
 
   <body class="text-stone-900 dark:bg-stone-900 dark:text-white">
-    %sveltekit.body%
+    <div class="contents">%sveltekit.body%</div>
   </body>
 </html>
